--- a/index.html
+++ b/index.html
@@ -4,28 +4,34 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CSS</title>
+    <script src="./darkmode.js" defer></script>
+    <link rel="stylesheet" href="style.css" type="text/css">
+
     <link rel="shorticon " href="./icon/image-81.ico" type="image/x-icon">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-    <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body >
+    <aside class="mode-dl">
+        <i class='bx bx-moon iMode'></i>
+        <i class='bx bx-sun iMode'  ></i>
+    </aside>
     <header class="title-icon">
        <span class="title text-head"> EJERCICIOS </span>
         <i class='bx bxl-css3 text-head cs'></i>
     </header>
     <section class="exersice-css">
-        <button class="btn1">
+        <a href="#" class="btn1">
             <span class="nameBtn">Marelys</span>
             <i class='bx bxs-pointer'></i>
-        </button>
-        <button class="btn2">
+        </a>
+        <a href="#" class="btn2">
             <span class="nameBtn">Evelyn</span>
             <i class='bx bxs-pointer'></i>
-        </button>
-        <button class="btn3">
+        </a>
+        <a href="#" class="btn3">
             <span class="nameBtn">Deysi</span>
             <i class='bx bxs-pointer'></i>
-        </button>
+        </a>
     </section>
 </body>  
 </html>
