--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="shorticon " href="./icon/image-81.ico" type="image/x-icon">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
+
 <body >
     <aside class="mode-dl">
         <i class='bx bx-moon iMode'></i>
@@ -20,7 +21,7 @@
         <i class='bx bxl-css3 text-head cs'></i>
     </header>
     <section class="exersice-css">
-        <a href="#" class="btn1">
+        <a href="./marelys/ejerciciosMarelys.html" class="btn1">
             <span class="nameBtn">Marelys</span>
             <i class='bx bxs-pointer'></i>
         </a>
