--- a/evelyn/ejercicioEvely.html
+++ b/evelyn/ejercicioEvely.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title></title>
-    <link rel="stylesheet" href="./ejercicioDeysi.css" type="text/css">
+    <link rel="stylesheet" href="./ejerciciosMarelis.css" type="text/css">
     <script src="./scriptMarelis.js"></script>
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 <body>
     <header class="head">
         <span class="title">
-            DEYSI<i class='bx bxs-ghost'></i>
+            Evely <i class='bx bxs-ghost'></i>
         </span>
         <ul class="menu-list">
             <li class="item-list">Youtube</li>
