--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
             <span class="nameBtn">Marelys</span>
             <i class='bx bxs-pointer'></i>
         </a>
-        <a href="#" class="btn2">
+        <a href="./evelyn/ejercicioEvely.html" class="btn2">
             <span class="nameBtn">Evelyn</span>
             <i class='bx bxs-pointer'></i>
         </a>
-        <a href="#" class="btn3">
+        <a href="./Deysi/ejerciciosDeysi.html" class="btn3">
             <span class="nameBtn">Deysi</span>
             <i class='bx bxs-pointer'></i>
         </a>
