--- a/Deysi/ejerciciosDeysi.html
+++ b/Deysi/ejerciciosDeysi.html
@@ -11,7 +11,7 @@
 <body>
     <header class="head">
         <span class="title">
-            DEYSI<i class='bx bxs-ghost'></i>
+            Ejerciciosproyect<i class='bx bxs-ghost'></i>
         </span>
         <ul class="menu-list">
             <li class="item-list">Youtube</li>
