--- a/Deysi/ejerciciosDeysi.html
+++ b/Deysi/ejerciciosDeysi.html
@@ -53,10 +53,11 @@
             <span class="text-exercise">
                 Este ejercicio tiene que ver con css, tienes que lograr que cada que hagas ":hover" en uno de los botones de arriba del menu tenga una animacion distinta , Ejemplo👇👇:
                 <br><br><br>
-                <button class="btn-example">
-                    Youtube
-                </button>
+               
             </span>
+            <button class="btn-example">
+                YouTube
+            </button>
         </section>
         <section class="coming-soon">
             <span class="sub-title">Coming Soon....</span>
