--- a/evelyn/ejercicioEvely.html
+++ b/evelyn/ejercicioEvely.html
@@ -47,6 +47,17 @@
             <span class="text-exercise">En una  pagina web siempre se tendran que realizar cambios, en este jercicios tendras que cambiar el logo que se encuantra a lado de tu nombre por el que mas te guste,nota(Una pagina web debe ser lo mas libiana posible, por eso para los logos se utilizan herrmientas especializadas, para no verse en la necesidad de tenr que descargar imagenes y tener la mala suerte que no sea del tamaño deseado o de con una mala calidad),puedes encontrar mas iconos en boxicons👉👉: <a href="https://boxicons.com/?query=" class="box-ic">link</a>  o Bootstrap👉👉: <a href="https://icons.getbootstrap.com" class="bootstrap">Link</a> y la manera de como se utiliza o se la implementa en una pagina web tendras que investigarla por tu propia cuenta</span>
         </section>
         <section class="exercisie5">
+            <span class="sub-title">Ejercicio5</span>
+            <span class="text-exercise">
+                Este ejercicio tiene que ver con css, tienes que lograr que cada que hagas ":hover" en uno de los botones de arriba del menu tenga una animacion distinta , Ejemplo👇👇:
+                <br><br><br>
+               
+            </span>
+            <button class="btn-example">
+                YouTube
+            </button>
+        </section>
+        <section class="coming-soon">
             <span class="sub-title">Coming Soon....</span>
             <span class="text-exercise">Puedes ayudarte con inteligencia artificial pero no podras copiar y pegar codigo, a parte de que es un codigo generico no aprenderas nada.... 
                 <br><br>
