--- a/Mateo/Mateo.html
+++ b/Mateo/Mateo.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-<head> 
+<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title></title>
-    <link rel="stylesheet" href="./ejercicioDeysi.css" type="text/css">
+    <link rel="stylesheet" href="./mateo.css" type="text/css">
     <script src="./scriptMarelis.js"></script>
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
@@ -12,14 +12,14 @@
     <header class="head">
         <span class="title"> 
 
-            Ejerciciosproyecto<i class='bx bxs-ghost'></i>   
+            MATEO<i class='bx bxs-ghost'></i>   
 
         </span>
         <ul class="menu-list">
-            <li class="item-list">Youtube</li>
-            <li class="item-list">Instagram</li>
-            <li class="item-list">Codedex</li>
-            <li class="item-list">Github</li>
+            <a href="https://www.youtube.com" target="_blank" class="item-list">Youtube</a>
+            <a href="https://www.instagram.com" target="_blank" class="item-list">Instagram</a>
+            <a href="https://www.codedex.io" target="_blank" class="item-list">Codedex</a>
+            <a href="https://github.com" target="_blank" class="item-list">Github</a>
         </ul>
     </header>
     <main class="main">
@@ -33,7 +33,8 @@
         <section class="exercisie2">
             <span class="sub-title">Ejercicio 2</span>
             <span class="text-exercise">
-                El segundo ejercicio tiene que ver con css, tienes que darle una fuente a todo el texto de esta pagina, mas especificamente la fuente llamada Poppins de google fonts, la virtud de una persona se basa en la forma de como resuelve un problema, tu trabajo es investigar como importar una fuente externa en CSS, una ayuda 👉👉: <a href="https://fonts.google.com/" class="link-font "
+                El segundo ejercicio tiene que ver con css, tienes que darle una fuente a todo el texto de esta pagina, mas especificamente la fuente llamada Poppins de google fonts, la virtud de una persona se basa en la forma de como resuelve un problema, tu trabajo es investigar como importar una fuente externa en CSS, una ayuda 👉👉: 
+                <a href="https://fonts.google.com/" class="link-font "
                 target="_blank">Link</a> 
             </span>
         </section>
