ejercicio completado mateo

--- a/Mateo/Mateo.html
+++ b/Mateo/Mateo.html
@@ -12,14 +12,14 @@
     <header class="head">
         <span class="title"> 
 
-            MATEO<i class='bx bxs-ghost'></i>   
+            MATEO<i class='bx bxl-graphql'></i>
 
         </span>
         <ul class="menu-list">
-            <a href="https://www.youtube.com" target="_blank" class="item-list">Youtube</a>
-            <a href="https://www.instagram.com" target="_blank" class="item-list">Instagram</a>
-            <a href="https://www.codedex.io" target="_blank" class="item-list">Codedex</a>
-            <a href="https://github.com" target="_blank" class="item-list">Github</a>
+            <a href="https://www.youtube.com" target="_blank" class="item-list"> <span class="textEnl">Youtube</span><i class='bx bxl-youtube' ></i></a>
+            <a href="https://www.instagram.com" target="_blank" class="item-list"><span class="textEnl">Instagram </span><i class='bx bxl-instagram'></i></a>
+            <a href="https://www.codedex.io" target="_blank" class="item-list"><span class="textEnl">Codedex </span></a>
+            <a href="https://github.com" target="_blank" class="item-list"><span class="textEnl">Github </span><i class='bx bxl-github' style='color:#ffffff' ></i></a>
         </ul>
     </header>
     <main class="main">
